--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 VITE_AUTH_API_BASE_URL=https://auth-service-6f9r.onrender.com/
+VITE_INVENTORY_API_BASE_URL=https://ordernest-inventory-service.onrender.com/
+VITE_ORDER_API_BASE_URL=https://ordernest-order-service.onrender.com/
 
